test/Runner/errors/tests/MI/Hook/Hook.runtime.js
eve("Suite", () => {
	seed("Seed", () => {});
	beforeSeed(() => { throw new Error(); });
})
